feat: book-tickets translations

--- a/public/locales/el/translation.json
+++ b/public/locales/el/translation.json
@@ -88,5 +88,55 @@
     "size": "Το μέγεθος δεν μου ταιριάζει",
     "title": "Επιστροφή προϊόντος",
     "wrong_product": "Το προϊόν δεν είναι αυτό που παρήγγειλα"
+  },
+  "book-tickets": {
+    "classical_concert": "Συναυλία κλασικής μουσικής",
+    "concerts": "Συναυλίες",
+    "friday": "Παρασκευή",
+    "london": "Λονδίνο",
+    "new_york": "Νέα Υόρκη",
+    "pop_concert": "Ποπ συναυλία",
+    "saturday": "Σάββατο",
+    "accoustic_concert": "Ακουστική συναυλία",
+    "action_movie": "Ταινία δράσης",
+    "animation_movie": "Ταινία κινουμένων σχεδίων",
+    "blues_concert": "Ακεφιά",
+    "carousel_button_label": "Κλείσε εισιτήρια",
+    "carousel_button_value": "Κράτηση για συγκεκριμένη εκδήλωση με όνομα \"{{0}}\" {{1}}",
+    "cartoon": "Καρτούν",
+    "cartoons": "Κοινούμενα σχέδια",
+    "comedy_movie": "Κωμωδία",
+    "dance_festival": "Φεστιβάλ Dj/Dance",
+    "dance_performance": "Παράσταση χορού",
+    "dance_performances": "Παραστάσεις χορού",
+    "electronic_concert": "Ηλεκτρονική συναυλία",
+    "festivals": "Φεστιβάλ",
+    "horror_movie": "Ταινία τρόμου",
+    "movies": "Ταινίες",
+    "musical": "Μιούζικαλ",
+    "musicals": "Μουσικές παραστάσεις",
+    "mystery_movie": "Ταινία μυστηρίου",
+    "no_more_events": "Δεν υπάρχουν άλλες εκδηλώσεις",
+    "no_more_events_text": "Δεν υπάρχουν άλλα {{0}} διαθέσιμα στο {{1}} για τον επόμενο μήνα",
+    "no_price": "Καμία τιμή",
+    "no_results": "Χωρίς αποτέλεσμα",
+    "no_results_text": "Δεν υπάρχουν {{0}} στην περιοχή {{1}} για τον επόμενο μήνα",
+    "no_title": "Χωρίς τίτλο",
+    "number_of_events_in_area": "Υπάρχουν {{0}} εκδηλώσεις τύπου {{1}} διαθέσημες στην περιοχή {{2}}",
+    "rap_festival": "Φεστιβάλ Hip Hop/Rap",
+    "rock_concert": "Ροκ συναυλία",
+    "romance_movie": "Ρομαντική ταινία",
+    "select_date": "Επιλέξτε μία από τις διαθέσιμες ημερομηνίες για την εκδήλωση",
+    "theatrical_performance": "Θεατρική παράσταση",
+    "theatrical_performances": "Θεατρικές παραστάσεις",
+    "tickets_cost": "Τα εισιτήρια κοστίζουν {{0}}€",
+    "view_more_button_label": "Δείτε περισσότερα",
+    "view_more_button_value": "Θέλω να δω επιπλέον {{0}} σε {{1}}",
+    "view_more_subtitle": "Για να δείτε επιπλέον {{0}} σε {{1}}, πατήστε παρακάτω",
+    "view_more_title": "Θέλετε να δείτε επιπλέον {{0}};",
+    "event_title": "{{0}} στην περιοχή {{1}}"
+  },
+  "web-client-instance": {
+    "preview": "Προεπισκόπηση"
   }
 }
