--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -91,5 +91,52 @@
   },
   "web-client-instance": {
     "preview": "Preview"
+  },
+  "book-tickets": {
+    "new_york": "New York",
+    "concerts": "Concerts",
+    "pop_concert": "Pop concert",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "classical_concert": "Classical concert",
+    "london": "London",
+    "blues_concert": "Blues & Jazz concert",
+    "rock_concert": "Rock concert",
+    "electronic_concert": "Electronic concert",
+    "accoustic_concert": "Accoustic concert",
+    "festivals": "Festivals",
+    "dance_festival": "Dj/Dance festival",
+    "rap_festival": "Hip Hop/Rap festival",
+    "theatrical_performance": "Theatrical performance",
+    "theatrical_performances": "Theatrical performances",
+    "musicals": "Musical shows",
+    "dance_performances": "Dance performances",
+    "dance_performance": "Dance performance",
+    "cartoons": "Cartoons",
+    "cartoon": "Cartoon",
+    "movies": "Movies",
+    "action_movie": "Action Movie",
+    "horror_movie": "Horror Movie",
+    "comedy_movie": "Comedy Movie",
+    "romance_movie": "Romance Movie",
+    "mystery_movie": "Mystery Movie",
+    "animation_movie": "Animation Movie",
+    "musical": "Musical",
+    "no_more_events": "No more events",
+    "no_more_events_text": "There are no other {{0}} available in {{1}} for the next month",
+    "select_date": "Please select one of the available dates for the event",
+    "carousel_button_label": "Book tickets",
+    "carousel_button_value": "Booking for specific event with name \"{{0}}\" {{1}}",
+    "no_title": "No title",
+    "no_price": "No price",
+    "tickets_cost": "Tickets cost {{0}}€",
+    "number_of_events_in_area": "There are {{0}} {{1}} available in {{2}}",
+    "no_results": "No results",
+    "no_results_text": "There are no {{0}} available in {{1}} for the next month",
+    "view_more_title": "Would you like to view more {{0}}?",
+    "view_more_subtitle": "To see more {{0}} in {{1}}, please press below",
+    "view_more_button_value": "I want to see more {{0}} in {{1}}",
+    "view_more_button_label": "View more",
+    "event_title": "{{0}} in {{1}}"
   }
 }
