feat: add es and pt-br translations

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -13,6 +13,130 @@
     "type_here": "Escribe aqui...",
     "well": "Qué salió bien?",
     "wrong": "Qué salió mal?",
-    "survey": "Encuesta"
+    "survey": "Encuesta",
+    "rating_required": "Se requiere calificación"
+  },
+  "book-tickets": {
+    "accoustic_concert": "Concierto acústico",
+    "action_movie": "Película de acción",
+    "animation_movie": "Película de animación",
+    "blues_concert": "Blues",
+    "carousel_button_label": "Reservar boletos",
+    "carousel_button_value": "Reserva para un evento específico con nombre \"{{0}}\" {{1}}",
+    "cartoon": "Dibujos animados",
+    "cartoons": "Dibujos animados",
+    "classical_concert": "Concierto clásico",
+    "comedy_movie": "Pelicula de comedia",
+    "concerts": "Conciertos",
+    "dance_festival": "Festival de DJ/Danza",
+    "dance_performance": "Espectáculo de danza",
+    "dance_performances": "Espectáculos de danza",
+    "electronic_concert": "Concierto electrónico",
+    "event_title": "{{0}} en {{1}}",
+    "festivals": "festivales",
+    "friday": "Viernes",
+    "horror_movie": "Película de terror",
+    "london": "Londres",
+    "movies": "Películas",
+    "musical": "Musical",
+    "musicals": "Espectáculos musicales",
+    "mystery_movie": "Película de misterio",
+    "new_york": "Nueva York",
+    "no_more_events": "No más eventos",
+    "no_more_events_text": "No hay otros {{0}} disponibles en {{1}} para el próximo mes",
+    "no_price": "Sin precio",
+    "no_results": "No hay resultados",
+    "no_results_text": "No hay {{0}} disponibles en {{1}} para el próximo mes",
+    "no_title": "Sin título",
+    "number_of_events_in_area": "Hay {{0}} {{1}} disponibles en {{2}}",
+    "pop_concert": "Concierto pop",
+    "rap_festival": "Festival de Hip Hop/Rap",
+    "rock_concert": "Concierto de rock",
+    "romance_movie": "Pelicula de romance",
+    "saturday": "Sábado",
+    "select_date": "Por favor seleccione una de las fechas disponibles para el evento",
+    "theatrical_performance": "Presentación teatral",
+    "theatrical_performances": "Representaciones teatrales",
+    "tickets_cost": "Las entradas cuestan {{0}}€",
+    "view_more_button_label": "Ver más",
+    "view_more_button_value": "Quiero ver más {{0}} en {{1}}",
+    "view_more_subtitle": "Para ver más {{0}} en {{1}}, presione a continuación",
+    "view_more_title": "¿Quieres ver más {{0}}?"
+  },
+  "common": {
+    "address": "DIRECCIÓN",
+    "city": "Ciudad",
+    "continue": "Continuar",
+    "disclaimer": "Los datos personales que usted inserte serán almacenados y utilizados por la empresa únicamente cuando envíe este Formulario.",
+    "email": "Correo electrónico",
+    "loading": "Cargando",
+    "loading_message": "Envío de información a Môveo",
+    "name": "Nombre",
+    "other": "Otro",
+    "phone_number": "Número de teléfono",
+    "success_message": "Información enviada con éxito a Môveo",
+    "surname": "Apellido",
+    "zip_code": "Código postal"
+  },
+  "demo-form": {
+    "female": "Femenino",
+    "gender": "Género",
+    "male": "Masculino",
+    "region": "Región",
+    "title": "Formulario de demostración"
+  },
+  "errors": {
+    "credit_card": "Por favor inserte un número de tarjeta de crédito válido",
+    "credit_card_digits": "El número de tarjeta consta de 16 dígitos.",
+    "cvv": "Por favor inserte un cvv válido",
+    "cvv_digits": "CVV consta de 3 dígitos",
+    "date": "Por favor inserte una fecha válida",
+    "date_format": "La fecha debe tener formato MM/AA",
+    "email": "Por favor inserte una dirección de correo electrónico válida",
+    "only_latin": "Sólo se permiten caracteres latinos.",
+    "only_numbers": "Sólo se permiten números",
+    "phone_number": "Por favor inserte un número de teléfono válido",
+    "required": "Se requiere campo",
+    "ten_digit_num": "Por favor inserte un número de 10 dígitos",
+    "zip_code": "Por favor inserte un código postal válido"
+  },
+  "list-property-form": {
+    "asking-price-eur": "Precio de venta (€)",
+    "commercial": "Comercial",
+    "location": "Ubicación",
+    "offering_type": "Tipo de oferta",
+    "owner": "Nombre del dueño",
+    "plot": "Trama",
+    "property_type": "Tipo de propiedad",
+    "rent": "Alquilar",
+    "residential": "Residencial",
+    "sell": "Vender",
+    "size-sq-m": "Tamaño (m2)",
+    "title": "Listar propiedad"
+  },
+  "payment_form": {
+    "card_holder": "Nombre del titular de la tarjeta",
+    "card_number": "Número de tarjeta",
+    "cvv": "CVV",
+    "exp_date": "Fecha de caducidad",
+    "loading": "Su pago está siendo procesado",
+    "pay": "Pagar",
+    "payment-form": "Formulario de pago",
+    "success": "Su pago fue exitoso",
+    "title": "Paga de forma segura con tu tarjeta de crédito o débito"
+  },
+  "return_product_form": {
+    "changed_mind": "Cambié de opinión",
+    "damaged_product": "Recibí un producto dañado",
+    "defective_product": "El producto esta defectuoso",
+    "orderNo": "N º de pedido.",
+    "product_id": "ID del Producto",
+    "reason": "Razón",
+    "size": "La talla no me queda bien",
+    "title": "Devolver producto",
+    "wrong_product": "El producto no es lo que pedí."
+  },
+  "web-client-instance": {
+    "preview": "Avance"
   }
 }
