--- a/public/locales/pt-BR/translation.json
+++ b/public/locales/pt-BR/translation.json
@@ -13,6 +13,130 @@
     "type_here": "Digite aqui...",
     "well": "O que foi bem?",
     "wrong": "O que deu errado?",
-    "survey": "Enquete"
+    "survey": "Enquete",
+    "rating_required": "A classificação é obrigatória"
+  },
+  "book-tickets": {
+    "accoustic_concert": "Concerto acústico",
+    "action_movie": "Filme de ação",
+    "animation_movie": "Filme de animação",
+    "blues_concert": "Blues",
+    "carousel_button_label": "Reservar ingressos",
+    "carousel_button_value": "Reserva para evento específico com nome \"{{0}}\" {{1}}",
+    "cartoon": "Desenho animado",
+    "cartoons": "Desenhos animados",
+    "classical_concert": "Concerto clássico",
+    "comedy_movie": "Filme de comédia",
+    "concerts": "Concertos",
+    "dance_festival": "Festival de Dj/Dança",
+    "dance_performance": "Performance de dança",
+    "dance_performances": "Apresentações de dança",
+    "electronic_concert": "Concerto eletrônico",
+    "event_title": "{{0}} em {{1}}",
+    "festivals": "Festivais",
+    "friday": "Sexta-feira",
+    "horror_movie": "Filme de terror",
+    "london": "Londres",
+    "movies": "Filmes",
+    "musical": "Musical",
+    "musicals": "Espetáculos musicais",
+    "mystery_movie": "Filme de mistério",
+    "new_york": "Nova Iorque",
+    "no_more_events": "Não há mais eventos",
+    "no_more_events_text": "Não há outros {{0}} disponíveis em {{1}} para o próximo mês",
+    "no_price": "Gratuito",
+    "no_results": "Nenhum resultado",
+    "no_results_text": "Não há {{0}} disponíveis em {{1}} para o próximo mês",
+    "no_title": "Sem título",
+    "number_of_events_in_area": "Existem {{0}} {{1}} disponíveis em {{2}}",
+    "pop_concert": "Concerto pop",
+    "rap_festival": "Festival de Hip Hop/Rap",
+    "rock_concert": "Concerto de rock",
+    "romance_movie": "Filme romântico",
+    "saturday": "Sábado",
+    "select_date": "Selecione uma das datas disponíveis para o evento",
+    "theatrical_performance": "Performance teatral",
+    "theatrical_performances": "Apresentações teatrais",
+    "tickets_cost": "Os ingressos custam {{0}}€",
+    "view_more_button_label": "Veja mais",
+    "view_more_button_value": "Quero ver mais {{0}} em {{1}}",
+    "view_more_subtitle": "Para ver mais {{0}} em {{1}}, pressione abaixo",
+    "view_more_title": "Gostaria de ver mais {{0}}?"
+  },
+  "common": {
+    "address": "Endereço",
+    "city": "Cidade",
+    "continue": "Continuar",
+    "disclaimer": "Os dados pessoais que você inserir serão armazenados e utilizados pela empresa somente quando você enviar este Formulário.",
+    "email": "E-mail",
+    "loading": "Carregando",
+    "loading_message": "Envio de informações para Môveo",
+    "name": "Nome",
+    "other": "Outro",
+    "phone_number": "Número de telefone",
+    "success_message": "Informações enviadas ao Môveo com sucesso",
+    "surname": "Sobrenome",
+    "zip_code": "CEP"
+  },
+  "demo-form": {
+    "female": "Fêmea",
+    "gender": "Gênero",
+    "male": "Macho",
+    "region": "Região",
+    "title": "Formulário de demonstração"
+  },
+  "errors": {
+    "credit_card": "Por favor insira um número de cartão de crédito válido",
+    "credit_card_digits": "O número do cartão consiste em 16 dígitos",
+    "cvv": "Por favor insira um cvv válido",
+    "cvv_digits": "CVV consiste em 3 dígitos",
+    "date": "Por favor insira uma data válida",
+    "date_format": "A data deve ter o formato MM/AA",
+    "email": "Por favor insira um endereço de e-mail válido",
+    "only_latin": "Somente caracteres latinos são permitidos",
+    "only_numbers": "Somente números são permitidos",
+    "phone_number": "Por favor insira um número de telefone válido",
+    "required": "Campo é obrigatório",
+    "ten_digit_num": "Por favor insira um número de 10 dígitos",
+    "zip_code": "Por favor insira um CEP válido"
+  },
+  "list-property-form": {
+    "asking-price-eur": "Preço pedido (€)",
+    "commercial": "Comercial",
+    "location": "Localização",
+    "offering_type": "Tipo de oferta",
+    "owner": "Nome do dono",
+    "plot": "Trama",
+    "property_type": "Tipo de Propriedade",
+    "rent": "Aluguel",
+    "residential": "residencial",
+    "sell": "Vender",
+    "size-sq-m": "Tamanho (m²)",
+    "title": "Listar propriedade"
+  },
+  "payment_form": {
+    "card_holder": "Nome do Titular",
+    "card_number": "Número do cartão",
+    "cvv": "CVV",
+    "exp_date": "Data de validade",
+    "loading": "Seu pagamento está sendo processado",
+    "pay": "Pagar",
+    "payment-form": "Formulário de pagamento",
+    "success": "Seu pagamento foi aprovado",
+    "title": "Pague com segurança com seu cartão de crédito ou débito"
+  },
+  "return_product_form": {
+    "changed_mind": "eu mudei de ideia",
+    "damaged_product": "Recebi um produto danificado",
+    "defective_product": "O produto está com defeito",
+    "orderNo": "Pedido nº.",
+    "product_id": "ID do produto",
+    "reason": "Razão",
+    "size": "O tamanho não cabe em mim",
+    "title": "Devolver produto",
+    "wrong_product": "O produto não é o que encomendei"
+  },
+  "web-client-instance": {
+    "preview": "Visualização"
   }
 }
